# sugar-ext

./: .gitignore  README.md  meson.build
examples/: meson.build  sugar_event_controller_example.c  sugar_file_attributes_example.c  sugar_grid_example.c  sugar_long_press_controller_example.c
src/: acme-volume.c  meson.build  sugar-clipboard.c  sugar-clipboard.h  sugar-ext-version.h.in  sugar-ext.c  sugar-ext.h  sugar-file-attributes.c  sugar-file-attributes.h  sugar-grid.c
src/controllers/: meson.build  sugar-enum-types.h.template  sugar-event-controller.c  sugar-event-controller.h  sugar-event-controllers.h  sugar-long-press-controller.c  sugar-long-press-controller.h  sugar-swipe-controller.c
tests/: README.md  meson.build  test_main.c  test_sugar_event_controller.c  test_sugar_file_attributes.c  test_sugar_grid.c  test_sugar_long_press_controller.c  test_utilities.c
